--- a/myst.yml
+++ b/myst.yml
@@ -6,7 +6,7 @@ project:
   title: Sensing Sound and Music
   description: A book for the UiO course MUS2640
   keywords: [sensing, sound, music]
-  authors: [Alexander Refsum Jensenius, University of Oslo]
+  authors: [MUS2640, University of Oslo]
   github: https://github.com/alexarje/sensing
   exports:
     - format: pdf
