--- a/book/myst.yml
+++ b/book/myst.yml
@@ -6,7 +6,7 @@ project:
   title: Sensing Sound and Music
   description: A book for the UiO course MUS2640
   keywords: [sensing, sound, music]
-  authors: [University of Oslo]
+  authors: [MUS2640University of Oslo]
   github: https://github.com/alexarje/sensing
   # To autogenerate a Table of Contents, run "jupyter book init --write-toc"
   toc:
@@ -15,7 +15,7 @@ project:
     - file: week1.md
     - file: week2.md
     - file: week3.ipynb
-    - file: week4.md
+    - file: week4.ipynb
     - file: week5.md
     - file: week6.md
     - file: week7.md
