--- a/book/myst.yml
+++ b/book/myst.yml
@@ -14,6 +14,7 @@ project:
     - file: week2.md
     - file: week3.ipynb
     - file: week4.ipynb
+    - file: week5a.ipynb
     - file: week5.md
     - file: week6.md
     - file: week7.md
