--- a/myst.yml
+++ b/myst.yml
@@ -13,6 +13,7 @@ project:
     - file: week1.md
     - file: week2.md
     - file: week3.ipynb
+    - file: week4.ipynb
     - file: week5a.ipynb
     - file: week5.md
     - file: week6.md
